Fix Player Name overlap

--- a/css/main.css
+++ b/css/main.css
@@ -180,12 +180,12 @@ main{
     height: 25%;
     justify-content: center;
     padding: 20px 5px 5px 20px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
 }
 
 .options{
-    padding-top: 5%;
+    padding-top: 15px;
     width: 100%;
     height: 100%;
     background-color: rgba(135, 206, 235, 0.9);
